--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@testing-library/user-event": "^13.5.0",
         "@tippyjs/react": "^4.2.6",
         "axios": "^1.2.5",
+        "bootstrap": "^5.2.3",
         "customize-cra": "^1.0.0",
         "react": "^18.2.0",
         "react-app-rewired": "^2.2.1",
