--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react": "^18.2.0",
         "react-app-rewired": "^2.2.1",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.43.1",
         "react-router-dom": "^6.6.2",
         "react-scripts": "5.0.1",
         "sass": "^1.57.1",
