--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
         "axios": "^1.2.5",
         "bootstrap": "^5.2.3",
         "customize-cra": "^1.0.0",
+        "jwt-decode": "^3.1.2",
         "react": "^18.2.0",
         "react-app-rewired": "^2.2.1",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.43.1",
+        "react-hot-toast": "^2.4.0",
         "react-router-dom": "^6.6.2",
         "react-scripts": "5.0.1",
         "sass": "^1.57.1",
